--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,19 @@
     "description" : "Randomly selects a search engine to perform a web search",
     "version" : "0.0.0",
 
-    "permissions" : ["omnibox"],
     "omnibox" : {
-        "keyword" : "" // think of a keyword
+        "keyword" : "rng" // think of a keyword
     },
-    "background" : {
-        "service_worker" : "action/background.js"
-    }
+    "background": {
+        "service_worker": "action/background.js"
+    },
     "action" : {
-        "default_popup" : "action/popup.html",
-        "default_icon" : "action/icon.png"
+        "default_popup" : "popup/popup.html",
+        "default_icon" : "popup/icon.png"
+    },
+    "icons" : {
+        "16" : "media/icon_16.png",
+        "32" : "media/icon_32.png",
+        "48" : "popup/icon.png"
     }
-
 }
